--- a/_i18n/cs.yml
+++ b/_i18n/cs.yml
@@ -75,27 +75,37 @@ page-home:
     card7-back-side: Nezůstáváme pozadu, sledujeme trendy v našem oboru a dál se vzděláváme
     members:
       - name: Zuzka Čapková
+        photo: img/pages/home/members/photo-capkova.png
         description: >
           <b>Backend senior vývojářka,</b> která toho dělá daleko víc - business proces modely, databázovou architekturu, zákaznickou podporu, analýzy. Má zkušenosti v oboru e-commerce.<br><br>Jaká je? Pečlivá, důsledná, zodpovědná, naše #1 pro modelování.
       - name: Petr Hrehorovský
+        photo: img/pages/home/members/photo-hrehorovsky.png
         description: <b>Senior vývojář,</b> maintainer kódu a navíc má pod palcem HR. Pracoval na projektech v oblasti realit, státní správy, aerolinek i bankovnictví.<br><br> Jaký je? Věčný kritik a pedant, dohlíží na čistotu kódu a českého jazyka. Zajímavost Petr je v týmu už 15 let a pořád ho to s námi baví.
       - name: Jirka Prajz
+        photo: img/pages/home/members/photo-prajz.png
         description: <b>Backend vývojář,</b> který také modeluje, navrhuje a spravuje systémy. Má zkušenosti s projekty pro neziskovku, sportovou organizaci nebo v tiskařském oboru.<br><br> Jaká je? DevOps je pro něj základ, pracuje systematicky a rychle.
       - name: Jindra Sušeň
+        photo: img/pages/home/members/photo-susen.png
         description:  >
           <b>Full stack senior vývojář,</b> náš programátor 1. Zkušenosti má z projektů na sportovní mobilní aplikaci, strojírenství, auto-moto i pro cestovní agenturu.<br><br> Jaký je? Nezahálí a pořád se vzdělává a zlepšuje.
       - name: Vašek Urbánek
+        photo: img/pages/home/members/photo-susen.png
         description: <b>Senior backend architekt a databázový architekt.</b> Pracoval na projektech pro aerolinky, bankovní sektor nebo ecommerce.<br><br> Jaký je? Jeho doménou je řešení náročných úkolů. Za vším vidí rizika, proto pracuje s každou variantou, aby je odstranil.
       - name: Tomáš Vavrda
+        photo: img/pages/home/members/photo-vavrda.png
         description: <b>Zakladatel AS a tvůrce ORIGAM,</b> manažer, softwarový a databázový architekt, Discourse administrátor, podnikatelský mentor, inovátor ve vzdělávání.<br><br> Jaký je? Hledá a najde vždy dobrá řešení pro klienty i kolegy. Jedná na rovinu, s jasným cílem pomoct. Zkušenosti v podnikání předává také studentům SŠ.
       - name: Majka Gerliczyová
+        photo: img/pages/home/members/photo-gerliczyova.png
         description: <b>Copywriterka,</b> marketérka a koordinátorka projektů.<br><br>Jaká je? Pokládá spoustu otázek, které pomáhají utřídit a vyjasnit si, co chcete a potřebujete pro své projekty. A pak Vám s tím pomůže.
       - name: Nela Hakr
+        photo: img/pages/home/members/photo-hakr.png
         description:  <b>Konzultantka</b><br><br>Jaká je?
       - name: Zdeněk Rajtr
+        photo: img/pages/home/members/photo-rajtr.png
         description: >
           <b>Správce dokumentace a koordinátor vzdělávání.</b>  Má zkušenosti ze zdravotnictví, hotelů, maloobchodu i vzdělávání.<br><br>Jaký je? Milovník zvířat, zodpovědný, nápomocný, klient je pro něj #1.
       - name: Pavel Tomáško
+        photo: img/pages/home/members/photo-tomasko.png
         description: >
           <b>Senior full stack vývojář.</b> Podílel se na výzkumu v energetice, stavebnictví a na řídících algoritmech, zkušenosti má i s embedded softwarem v oblasti automotive.<br><br>Jaký je? Pracuje důsledně do detailu, je hloubavý a věčně kritický na svou práci.<br><br>Používá: React
   join-us:
