--- a/_i18n/cs.yml
+++ b/_i18n/cs.yml
@@ -46,7 +46,7 @@ page-home:
     title: S čím pomůžeme
     text: Umožňujeme klientům efektivní práci z odkudkoliv – z domova, z terénu, z lodi – pomocí jednoduchých informačních systémů a komunikačních nástrojů.
     card-title1: Splňte si sny
-    card-text1: Máme zkušenosti s řízením procesů v různých odvětvích. V rámci spolupráce v nás máte i poradenskou oporu, kdy Vám dokážeme předat osvědčené postupy.
+    card-text1: Rozvíjejte Vaše podnikání díky nejnovějším technologiím. Co šlo v malém, rozjeďte bez obav dál. Rozhodujte se na základě pravdivých a přesných dat ze spolehlivých interních systémů a aplikací.
     card-title2: Pryč s rutinou
     card-text2: Zvládnout víc práce s menší námahou. Automatizujte opakující se činnosti a ušetřený čas využijte efektivněji. Třeba na kreativní úkoly.
     card-title3: Víc hlav, víc zkušeností
@@ -58,21 +58,19 @@ page-home:
     button: Mám zájem o spolupráci
   about-us:
     title: Toto jsme my
-    text: Naším úkolem je pomoct Vám se zapeklitým problémem. Máme na to ty nejlepší vlastnosti.
+    text: V týmu se známe profesně i osobně, vzájemně se podporujeme a doplňujeme. To nám umožňuje efektivně Vám pomoct se zapeklitým problémem.
     card1: Efektivní
-    card1-back-side: Nezůstáváme pozadu, sledujeme trendy v našem oboru a dál se vzděláváme
-    card2: ---
-    card2-back-side: Nezůstáváme pozadu, sledujeme trendy v našem oboru a dál se vzděláváme
+    card1-back-side: Každý je profíkem v jiné oblasti, ale spolu jsme sehraní. Učíme se od sebe.
+    card2: Zvědaví
+    card2-back-side: Nezůstáváme pozadu, sledujeme trendy v našem oboru a dál se vzděláváme.
     card3: Nezávislí
-    card3-back-side: Nezůstáváme pozadu, sledujeme trendy v našem oboru a dál se vzděláváme
+    card3-back-side: Na úkolech pracujeme samostatně, nepotřebujeme pošťuchovat. Důležitá rozhodnutí s Vámi konzultujeme.
     card4: Transparentní
-    card4-back-side: Nezůstáváme pozadu, sledujeme trendy v našem oboru a dál se vzděláváme
+    card4-back-side: Mluvíme jasně a na rovinu. Děláme jen to, co dává smysl.
     card5: Inovativní
-    card5-back-side: Nezůstáváme pozadu, sledujeme trendy v našem oboru a dál se vzděláváme
-    card6: Jednotní
-    card6-back-side: Nezůstáváme pozadu, sledujeme trendy v našem oboru a dál se vzděláváme
-    card7: Proaktivní
-    card7-back-side: Nezůstáváme pozadu, sledujeme trendy v našem oboru a dál se vzděláváme
+    card5-back-side: Nad úkoly přemýšlíme komplexně, posuzujeme různé aspekty a navrhujeme často neobvyklá řešení.
+    card6: Proaktivní
+    card6-back-side: Domýšlíme nedomyšlená zadání, abychom vytvořili smysluplný produkt.
     members:
       - name: Zuzka Čapková
         photo: img/pages/home/members/photo-capkova.png
@@ -80,34 +78,33 @@ page-home:
           <b>Backend senior vývojářka,</b> která toho dělá daleko víc - business proces modely, databázovou architekturu, zákaznickou podporu, analýzy. Má zkušenosti v oboru e-commerce.<br><br>Jaká je? Pečlivá, důsledná, zodpovědná, naše #1 pro modelování.
       - name: Petr Hrehorovský
         photo: img/pages/home/members/photo-hrehorovsky.png
-        description: <b>Senior vývojář,</b> maintainer kódu a navíc má pod palcem HR. Pracoval na projektech v oblasti realit, státní správy, aerolinek i bankovnictví.<br><br> Jaký je? Věčný kritik a pedant, dohlíží na čistotu kódu a českého jazyka. Zajímavost Petr je v týmu už 15 let a pořád ho to s námi baví.
+        description: <b>Provozní ředitel,</b> senior vývojář, maintainer kódu a navíc má pod palcem HR. Pracoval na projektech v oblasti realit, státní správy, aerolinek i bankovnictví.<br><br> Jaký je? Věčný kritik a pedant, dohlíží na čistotu kódu a českého jazyka. Zajímavost Petr je v týmu už 15 let a pořád ho to s námi baví.
       - name: Jirka Prajz
         photo: img/pages/home/members/photo-prajz.png
         description: <b>Backend vývojář,</b> který také modeluje, navrhuje a spravuje systémy. Má zkušenosti s projekty pro neziskovku, sportovou organizaci nebo v tiskařském oboru.<br><br> Jaká je? DevOps je pro něj základ, pracuje systematicky a rychle.
       - name: Jindra Sušeň
         photo: img/pages/home/members/photo-susen.png
         description:  >
-          <b>Full stack senior vývojář,</b> náš programátor 1. Zkušenosti má z projektů na sportovní mobilní aplikaci, strojírenství, auto-moto i pro cestovní agenturu.<br><br> Jaký je? Nezahálí a pořád se vzdělává a zlepšuje.
+          <b>Senior full stack vývojář,</b> náš programátor 1. Zkušenosti má z projektů na sportovní mobilní aplikaci, strojírenství, auto-moto i pro cestovní agenturu.<br><br> Jaký je? Nezahálí a pořád se vzdělává a zlepšuje.
       - name: Vašek Urbánek
         photo: img/pages/home/members/photo-susen.png
         description: <b>Senior backend architekt a databázový architekt.</b> Pracoval na projektech pro aerolinky, bankovní sektor nebo ecommerce.<br><br> Jaký je? Jeho doménou je řešení náročných úkolů. Za vším vidí rizika, proto pracuje s každou variantou, aby je odstranil.
       - name: Tomáš Vavrda
         photo: img/pages/home/members/photo-vavrda.png
-        description: <b>Zakladatel AS a tvůrce ORIGAM,</b> manažer, softwarový a databázový architekt, Discourse administrátor, podnikatelský mentor, inovátor ve vzdělávání.<br><br> Jaký je? Hledá a najde vždy dobrá řešení pro klienty i kolegy. Jedná na rovinu, s jasným cílem pomoct. Zkušenosti v podnikání předává také studentům SŠ.
+        description: <b>Zakladatel Advantage Solutions a tvůrce ORIGAM,</b> manažer, softwarový a databázový architekt, Discourse administrátor, podnikatelský mentor, inovátor ve vzdělávání.<br><br> Jaký je? Hledá a najde vždy dobrá řešení pro klienty i kolegy. Jedná na rovinu, s jasným cílem pomoct. Zkušenosti v podnikání předává také studentům SŠ.
       - name: Majka Gerliczyová
         photo: img/pages/home/members/photo-gerliczyova.png
         description: <b>Copywriterka,</b> marketérka a koordinátorka projektů.<br><br>Jaká je? Pokládá spoustu otázek, které pomáhají utřídit a vyjasnit si, co chcete a potřebujete pro své projekty. A pak Vám s tím pomůže.
       - name: Nela Hakr
         photo: img/pages/home/members/photo-hakr.png
         description:  <b>Konzultantka</b><br><br>Jaká je?
-      - name: Zdeněk Rajtr
+      - name: David Pilpach
         photo: img/pages/home/members/photo-rajtr.png
-        description: >
-          <b>Správce dokumentace a koordinátor vzdělávání.</b>  Má zkušenosti ze zdravotnictví, hotelů, maloobchodu i vzdělávání.<br><br>Jaký je? Milovník zvířat, zodpovědný, nápomocný, klient je pro něj #1.
+        description: <b>Full stack vývojář.</b>  Student.<br><br>Jaký je? Profesionálně skáče a je svědomitý a zodpovědný v práci.
       - name: Pavel Tomáško
         photo: img/pages/home/members/photo-tomasko.png
         description: >
-          <b>Senior full stack vývojář.</b> Podílel se na výzkumu v energetice, stavebnictví a na řídících algoritmech, zkušenosti má i s embedded softwarem v oblasti automotive.<br><br>Jaký je? Pracuje důsledně do detailu, je hloubavý a věčně kritický na svou práci.<br><br>Používá: React
+          <b>Senior full stack vývojář.</b> Podílel se na výzkumu v energetice, stavebnictví a na řídících algoritmech, zkušenosti má i s embedded softwarem v oblasti automotive.<br><br>Jaký je? Pracuje důsledně do detailu, je hloubavý a věčně kritický na svou práci.
   join-us:
     title: Chcete se k nám přidat?
     text: Hodíte se k nám? Představte se nám a pojďme spolu pracovat na projektech, které mají smysl.
